# rabbit

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  fly.toml
.memsearch/memory/: 2026-05-23.md  2026-06-02.md  2026-06-13.md
src/: auth.rs  client.rs  config.rs  main.rs  proxy.rs  rabbit.proto  server.rs  shared.rs
src/adapter/: agent.rs  codec.rs  coordinator.rs  mod.rs  proto.rs
src/client/: mod.rs  tunnel_cluster.rs
src/coordinator/: mod.rs  port_pool.rs  registry.rs  session.rs
src/domain/: coordinator.rs  error.rs  mod.rs  types.rs
src/server/: client_manager.rs  http.rs  mod.rs  tunnel_agent.rs  tunnel_server.rs
