[package]
name = "rabbit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rabbit"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
    "io-util",
] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "http1"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
fastrand = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
http = "1"
http-body-util = "0.1"
